Cambios en la base de datos

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -64,6 +64,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="sql\SqlServerCreateData.sql" />
+    <Content Include="sql\SqlServerCreateDatabase.sql" />
+    <Content Include="sql\SqlServerCreateTables.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
