--- a/Model/packages.config
+++ b/Model/packages.config
@@ -7,4 +7,5 @@
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
   <package id="Ninject.Extensions.Interception" version="3.3.5" targetFramework="net461" />
   <package id="Ninject.Extensions.Interception.DynamicProxy" version="3.3.5" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="5.0.2" targetFramework="net461" />
 </packages>
