--- a/Test/packages.config
+++ b/Test/packages.config
@@ -8,4 +8,5 @@
   <package id="Ninject.Extensions.Interception" version="3.3.5" targetFramework="net461" />
   <package id="Ninject.Extensions.Interception.DynamicProxy" version="3.3.5" targetFramework="net461" />
   <package id="Ninject.Extensions.Xml" version="3.3.0" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="5.0.2" targetFramework="net461" />
 </packages>
