--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -117,7 +117,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\PhotoService\CommentBlock.cs" />
+    <Compile Include="Services\CommentService\CommentBlock.cs" />
+    <Compile Include="Services\CommentService\CommentService.cs" />
+    <Compile Include="Services\CommentService\ICommentService.cs" />
     <Compile Include="Services\PhotoService\Exceptions\Exception1.cs" />
     <Compile Include="Services\PhotoService\IPhotoService.cs" />
     <Compile Include="Services\PhotoService\PhotoBlock.cs" />
