--- a/WebApplication/packages.config
+++ b/WebApplication/packages.config
@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+	<package id="Castle.Core" version="3.2.0" targetFramework="net45" />
+	<package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
+	<package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
+	<package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+	<package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+	<package id="Ninject.Extensions.Interception" version="3.2.0.0" targetFramework="net45" />
+	<package id="Ninject.Extensions.Interception.DynamicProxy" version="3.2.0.0" targetFramework="net45" />
 </packages>
