--- a/Web/bin/WebApplication.dll.config
+++ b/Web/bin/WebApplication.dll.config
@@ -92,7 +92,7 @@
 		<pages controlRenderingCompatibilityVersion="4.0" clientIDMode="AutoID" />
 	</system.web>
 
-	<!-- This section gives the unauthenticated user access to the register page
+	<!-- This section gives the unauthenticated user access to determinated pages
        only. -->
 	<location path="Pages/User">
 		<system.web>
@@ -102,6 +102,13 @@
 		</system.web>
 	</location>
 	<location path="Pages/User/Register.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="Pages/Photo/Explore.aspx">
 		<system.web>
 			<authorization>
 				<allow users="*" />
