Subidos en la capa web la búsqueda de imagenes, detalles y comentarios v1

--- a/Web/Web.config
+++ b/Web/Web.config
@@ -147,6 +147,30 @@
 			</authorization>
 		</system.web>
 	</location>
+	<!-- This section gives the unauthenticated user access to the photoComments-->
+	<location path="Pages/Photo/PhotoComments.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+	<!-- This section gives the unauthenticated user access to the error page -->
+	<location path="Pages/Photo/PhotoDetails.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+	<!-- This section gives the unauthenticated user access to the error page -->
+	<location path="Pages/User/UserProfile.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
 	<location path="Pages/UserExists.aspx">
 		<system.web>
 			<authorization>
