--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -115,7 +115,10 @@
     <Content Include="Css\styles.css" />
     <Content Include="Global.asax" />
     <Content Include="Pages\Errors\InternalError.aspx" />
+    <Content Include="Pages\Photo\AddComment.aspx" />
     <Content Include="Pages\Photo\Explore.aspx" />
+    <Content Include="Pages\Photo\PhotoComments.aspx" />
+    <Content Include="Pages\Photo\PhotoDetails.aspx" />
     <Content Include="Pages\UserExists.aspx" />
     <Content Include="Pages\User\Authentication.aspx" />
     <Content Include="Pages\User\ChangePassword.aspx" />
@@ -124,6 +127,7 @@
     <Content Include="Pages\User\Profile.aspx" />
     <Content Include="Pages\User\Register.aspx" />
     <Content Include="Pages\User\UpdateUserProfile.aspx" />
+    <Content Include="Pages\User\UserProfile.aspx" />
     <Content Include="Web.config" />
     <Content Include="Pages\MainPage.aspx" />
   </ItemGroup>
@@ -163,12 +167,33 @@
     <Compile Include="Pages\Errors\InternalError.aspx.designer.cs">
       <DependentUpon>InternalError.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Pages\Photo\AddComment.aspx.cs">
+      <DependentUpon>AddComment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Photo\AddComment.aspx.designer.cs">
+      <DependentUpon>AddComment.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Photo\Explore.aspx.cs">
       <DependentUpon>Explore.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Pages\Photo\Explore.aspx.designer.cs">
       <DependentUpon>Explore.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Photo\PhotoComments.aspx.cs">
+      <DependentUpon>PhotoComments.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Photo\PhotoComments.aspx.designer.cs">
+      <DependentUpon>PhotoComments.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Photo\PhotoDetails.aspx.cs">
+      <DependentUpon>PhotoDetails.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Photo\PhotoDetails.aspx.designer.cs">
+      <DependentUpon>PhotoDetails.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\UserExists.aspx.cs">
       <DependentUpon>UserExists.aspx</DependentUpon>
@@ -225,6 +250,13 @@
     </Compile>
     <Compile Include="Pages\User\UpdateUserProfile.aspx.designer.cs">
       <DependentUpon>UpdateUserProfile.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\User\UserProfile.aspx.cs">
+      <DependentUpon>UserProfile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\User\UserProfile.aspx.designer.cs">
+      <DependentUpon>UserProfile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pages\MainPage.aspx.cs">
