--- a/Web/bin/WebApplication.dll.config
+++ b/Web/bin/WebApplication.dll.config
@@ -67,7 +67,7 @@
             "AutoDetect"            ==> Cookies will be used if client browsers
                                         allows it
     -->
-		<sessionState cookieless="UseCookies" timeout="30" />
+		<sessionState cookieless="UseUri" timeout="30" />
 		<!-- The <customErrors> section enables configuration of what to do
          if/when an unhandled error occurs during the execution of a request.
 
@@ -109,6 +109,13 @@
 		</system.web>
 	</location>
 	<location path="Pages/Photo/Explore.aspx">
+		<system.web>
+			<authorization>
+				<allow users="*" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="Pages/User/Profile.aspx">
 		<system.web>
 			<authorization>
 				<allow users="*" />
