--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -418,6 +418,9 @@
   <ItemGroup>
     <Content Include="Pages\User\App_LocalResources\Profile.aspx.resx" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Pages\Photo\App_LocalResources\PhotoComments.aspx.resx" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
