añadidos servicios y funciones para tags

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -120,13 +120,13 @@
     <Content Include="Pages\Photo\AddComment.aspx" />
     <Content Include="Pages\Photo\Explore.aspx" />
     <Content Include="Pages\Photo\ModifyComment.aspx" />
+    <Content Include="Pages\Photo\ModifyTags.aspx" />
     <Content Include="Pages\Photo\PhotoComments.aspx" />
     <Content Include="Pages\Photo\PhotoDetails.aspx" />
     <Content Include="Pages\Photo\UploadPhoto.aspx" />
     <Content Include="Pages\UserExists.aspx" />
     <Content Include="Pages\User\Authentication.aspx" />
     <Content Include="Pages\User\ChangePassword.aspx" />
-    <Content Include="Pages\User\Followeds.aspx" />
     <Content Include="Pages\User\Logout.aspx" />
     <Content Include="Pages\User\MyProfile.aspx" />
     <Content Include="Pages\User\Followers.aspx" />
@@ -194,6 +194,13 @@
     <Compile Include="Pages\Photo\ModifyComment.aspx.designer.cs">
       <DependentUpon>ModifyComment.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Pages\Photo\ModifyTags.aspx.cs">
+      <DependentUpon>ModifyTags.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Photo\ModifyTags.aspx.designer.cs">
+      <DependentUpon>ModifyTags.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Photo\PhotoComments.aspx.cs">
       <DependentUpon>PhotoComments.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -235,13 +242,6 @@
     </Compile>
     <Compile Include="Pages\User\ChangePassword.aspx.designer.cs">
       <DependentUpon>ChangePassword.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\User\Followeds.aspx.cs">
-      <DependentUpon>Followeds.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Pages\User\Followeds.aspx.designer.cs">
-      <DependentUpon>Followeds.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\User\Logout.aspx.cs">
       <DependentUpon>Logout.aspx</DependentUpon>
@@ -460,10 +460,7 @@
     <Content Include="Pages\Photo\App_LocalResources\UploadPhoto.aspx.resx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Pages\User\App_LocalResources\Followers.aspx.es.resx" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Pages\User\App_LocalResources\Followed.aspx.es.resx" />
+    <Content Include="Pages\Photo\App_LocalResources\ModifyTags.aspx.resx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
