--- a/Web/Web.config
+++ b/Web/Web.config
@@ -163,6 +163,14 @@
 		</system.web>
 	</location>
   <!-- This section gives the unauthenticated user access to the photoComments-->
+  <location path="Pages/Photo/ModifyTags.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <!-- This section gives the unauthenticated user access to the photoComments-->
   <location path="Pages/Photo/AddComment.aspx">
     <system.web>
       <authorization>
